clone 1st commit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
         <h1>Welcome to Our Website</h1>
-        <p>We offer amazing services and resources. Explore our website to learn more.</p>
+        <p>HI Everyone</p>
     </main>
 
     <footer>
