--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Contact Page</h1>
+    <h1>lawda bhaai</h1>
     <p>Sample GitRepo example</p>
 </body>
 </html>
